--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ Introduction-to-Programming/Pointers And References/Const and Pointers/.vs/Const
 *.exe
 Object-Oriented-Programming/Week 2/Task 1 - Timestamp/.vs/Task 1 - Timestamp/v16/.suo
 Object-Oriented-Programming/Week 3/UserInfo/.vs/UserInfo/v16/.suo
+Arrays/.vs/Arrays/v16/.suo
+*.json
+*.sqlite
+Test 3 prep/tempCodeRunnerFile.cpp
